Update .gitignore and README

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
+**sass-cache**
+
 0x02-CSS_advanced/index.html
+
+0x03-sass_scss/10-colors.scss
+0x03-sass_scss/11-photos.scss
+0x03-sass_scss/103-sort_list.scss
